[#20]ShowMovies&Genres2ClientD3.jsGraph+SaveLog4j2local
save log4j file to  local => ${Tomcat}/logs
update d3 sag with  d3.selectAll("svg > *").remove();